tests/NormalTests/paczka1/small_fuzzy/10486001.err
Error in line 5: KcVcQrZHZhP A912 78,4
Error in line 11: FVa A552 81,2
